--- a/Src/Zing.Web/Views/Home/Index.cshtml
+++ b/Src/Zing.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Zing.Module.Users.ViewModels.UserViewModel
+@{
     ViewBag.Title = "Index";
 
     var workContext = WorkContext;
@@ -6,3 +7,12 @@
 }
 
 <h2>Index</h2>
+
+@using (Html.BeginForm())
+{
+    @Html.ValidationSummary(true)
+
+    @Html.EditorForModel()
+
+    <button class="btn btn-primary">提交</button>
+}
