--- a/Src/Zing.Web/Views/Home/Index.cshtml
+++ b/Src/Zing.Web/Views/Home/Index.cshtml
@@ -1,18 +1,18 @@
-﻿@model Zing.Module.Users.ViewModels.UserViewModel
+﻿@model Zing.Modules.Users.ViewModels.UserViewModel
 @{
     ViewBag.Title = "Index";
 
     var workContext = WorkContext;
     
 }
-
-<h2>Index</h2>
-
+<h2>
+    Index</h2>
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
 
     @Html.EditorForModel()
 
-    <button class="btn btn-primary">提交</button>
+    <button class="btn btn-primary">
+        提交</button>
 }
