--- a/Src/Zing.Web/Views/Home/Index.cshtml
+++ b/Src/Zing.Web/Views/Home/Index.cshtml
@@ -5,14 +5,20 @@
     var workContext = WorkContext;
     
 }
-<h2>
-    Index</h2>
-@using (Html.BeginForm())
+<h2>Index</h2>
+@using (Html.BeginForm("Index", "Home", FormMethod.Post, new { role = "form", @class = "form-horizontal" }))
 {
-    @Html.ValidationSummary(true)
+    <div class="form-group">
+        <div class="col-lg-12">
+            @Html.ValidationSummary(false)
+        </div>
+    </div>
 
     @Html.EditorForModel()
 
-    <button class="btn btn-primary">
-        提交</button>
+    <div class="form-group">
+        <div class="col-lg-offset-2 col-lg-10">
+            <button type="submit" class="btn btn-primary">提交</button>
+        </div>
+    </div>
 }
