--- a/Src/Zing.Web/Views/Home/Index.cshtml
+++ b/Src/Zing.Web/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
     var workContext = WorkContext;
     
 }
-<h2>Index</h2>
+<h2>
+    Index</h2>
 @using (Html.BeginForm("Index", "Home", FormMethod.Post, new { role = "form", @class = "form-horizontal" }))
 {
     <div class="form-group">
@@ -14,13 +15,15 @@
         </div>
     </div>
 
-    @Html.EditorForModel()
+@*@Html.EditorForModel()*@
 
     
-    <div class="form-group">
+@* <div class="form-group">
         <div class="col-lg-offset-2 col-lg-10">
-            <button type="submit" class="btn btn-primary">提交</button>
+            <button type="submit" class="btn btn-primary">
+                提交</button>
         </div>
-    </div>
+    </div>*@
      
 }
+@Html.Partial("Pager")
