--- a/Src/Zing.Web/Views/Home/Index.cshtml
+++ b/Src/Zing.Web/Views/Home/Index.cshtml
@@ -5,8 +5,7 @@
     var workContext = WorkContext;
     
 }
-<h2>
-    Index</h2>
+<h2>Index</h2>
 @using (Html.BeginForm("Index", "Home", FormMethod.Post, new { role = "form", @class = "form-horizontal" }))
 {
     <div class="form-group">
