--- a/Src/Zing.Web/Content/site.css
+++ b/Src/Zing.Web/Content/site.css
@@ -1,29 +1,37 @@
-﻿input.input-validation-error {
-    border: 1px solid #f00;
+﻿input.input-validation-error
+{
+	border: 1px solid #f00;
 }
 
-.input-validation-valid { /* Optional: you can set whatever style you want */
+.input-validation-valid
+{
+	/* Optional: you can set whatever style you want */
 }
 
-.field-validation-error {
-    color: #f00;
+.field-validation-error
+{
+	color: #f00;
 }
 
-.field-validation-valid {
-    display: none;
+.field-validation-valid
+{
+	display: none;
 }
 
-.validation-summary-errors {
-    font-weight: bold;
-    color: #f00;
+.validation-summary-errors
+{
+	font-weight: bold;
+	color: #f00;
 }
 
-.validation-summary-valid {
-    display: none;
+.validation-summary-valid
+{
+	display: none;
 }
 
-.form-row input {
-    width: 90%;
+.form-row input
+{
+	width: 90%;
 }
 
 /* Pager */
@@ -40,6 +48,7 @@
 	margin-top: 4px;
 	padding: 3px;
 	text-align: center;
+	cursor: not-allowed;
 }
 
 .pager .current
@@ -51,6 +60,17 @@
 	margin-top: 4px;
 	padding: 3px 5px;
 	text-align: center;
+	background-color: #428bca;
+	border-color: #428bca;
+}
+
+.pager > .current > a, .pager > .current > span, .pager > .current > a:hover, .pager > .current > span:hover, .pager > .current > a:focus, .pager > .current > span:focus
+{
+	z-index: 2;
+	color: #ffffff;
+	cursor: default;
+	background-color: #428bca;
+	border-color: #428bca;
 }
 
 .pager span, .pager a
