--- a/Src/Zing.Web/Content/site.css
+++ b/Src/Zing.Web/Content/site.css
@@ -1,4 +1,130 @@
-﻿input.input-validation-error
+﻿.wrapper{
+	padding: 0;
+	margin: 0;
+	background: #E8E9EE;
+	height: 100%;
+	position: relative;
+}
+.top-navbar{
+	position: fixed;
+	height: 60px;
+	top: 0;
+	left: 0;
+	right: 0;
+	background: #fff;
+	z-index: 1024;
+	-webkit-transition:All 0.3s ease;
+	-moz-transition:All 0.3s ease;
+	-o-transition:All 0.3s ease;
+}
+
+.top-navbar-inner{position: relative;}
+.logo-brand {
+	width: 250px;
+	height: 60px;
+	position: absolute;
+	left: 0;
+	top: 0;
+	font-size: 20px;
+	font-weight: 700;
+	padding: 0;
+	text-align: center;
+	background: #242A34;
+	color: #fff;
+}
+.logo-brand img{
+	width: auto;
+	max-width: 160px;
+}
+.logo-brand.white-color {
+	background: #fff;
+	color: #434A54;
+}
+.logo-brand.primary-color {
+	background: #34AF90;
+	color: #fff;
+}
+.logo-brand.success-color {
+	background: #89BC4B;
+	color: #fff;
+}
+.logo-brand.info-color {
+	background: #39AAD6;
+	color: #fff;
+}
+.logo-brand.danger-color {
+	background: #E5553B;
+	color: #fff;
+}
+.logo-brand.warning-color {
+	background: #F2B740;
+	color: #fff;
+}
+.top-nav-content{
+	position: relative;
+	margin-left: 250px;
+	height: 60px;
+	padding-left: 50px;
+	padding-right: 50px;
+}
+
+.top-nav-content{
+	position: relative;
+	margin-left: 250px;
+	height: 60px;
+	padding-left: 50px;
+	padding-right: 50px;
+}
+.top-nav-content.no-right-sidebar{
+	padding-right: 0px;
+}
+.top-nav-content .navbar-form{
+	padding-top: 13px;
+	padding-bottom: 13px;
+	height: 60px;
+	margin-bottom: 0;
+	margin-top: 0;
+}
+.top-nav-content .navbar-form .form-control{
+	border: none;
+	background: #E6E9ED;
+}
+.top-nav-content .navbar-form .form-control:focus{
+	background: #F5F7FA;
+}
+.top-nav-content .navbar-nav > li > a {
+	padding-top: 19px;
+	padding-bottom: 19px;
+	height: 60px;
+	color: #656D78;
+	position: relative;
+}
+.top-nav-content .navbar-nav > li > a .icon-count {
+	position: absolute;
+	top: 13px;
+	right: 0;
+}
+.top-nav-content .navbar-nav > li > a:hover,
+.top-nav-content .navbar-nav > li > a:focus {
+	background-color: transparent;
+	color: #434A54;
+}
+.top-nav-content .navbar-nav > .open > a,
+.top-nav-content .navbar-nav > .open > a:hover,
+.top-nav-content .navbar-nav > .open > a:focus {
+	background-color: transparent;
+}
+
+ul.nav-user{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	position: absolute;
+	top: 0;
+	right: 50px;
+}
+
+input.input-validation-error
 {
 	border: 1px solid #f00;
 }
