--- a/Src/Zing.Web/Views/Shared/_Layout.cshtml
+++ b/Src/Zing.Web/Views/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
         <div class="top-navbar">
             <div class="top-navbar-inner">
                 <!-- Begin Logo brand -->
-                <div class="logo-brand warning-color">
-                    <a href="index.html">ZING WEB</a>
+                <div class="logo-brand">
+                    <a href="index.html" class="logo-text">ZING WEB</a>
                 </div>
                 <!-- /.logo-brand -->
                 <!-- End Logo brand -->
