--- a/Src/Zing.Web/Views/Shared/_Layout.cshtml
+++ b/Src/Zing.Web/Views/Shared/_Layout.cshtml
@@ -46,7 +46,8 @@
                     <!-- Begin user session nav -->
                     <ul class="nav-user navbar-right">
                         <li class="dropdown"><a href="#fakelink" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="assets/img/avatar/avatar-1.jpg" class="avatar img-circle" alt="Avatar">
+                            <img src="http://diliat.in/themeforest/sentir/1.0.0/assets/img/avatar/avatar-1.jpg"
+                                class="avatar img-circle" alt="Avatar">
                             Hi, <strong>Paris Hawker</strong> </a>
                             <ul class="dropdown-menu square primary margin-list-rounded with-triangle">
                                 <li><a href="#fakelink">Account setting</a></li>
@@ -433,11 +434,82 @@
         </div>
         <!-- /.top-navbar -->
         <!-- END TOP NAV -->
+        <div class="sidebar-left sidebar-nicescroller" tabindex="5000" style="overflow: hidden;
+            outline: none;">
+            <ul class="sidebar-menu">
+                <li><a href="index.html"><i class="fa fa-dashboard icon-sidebar"></i>Dashboard</a></li>
+                <li><a href="#fakelink"><i class="fa fa-desktop icon-sidebar"></i><i class="fa fa-angle-right chevron-icon-sidebar">
+                </i>Layout template <span class="badge badge-warning span-sidebar">3</span> </a>
+                    <ul class="submenu">
+                        <li><a href="#fakelink">Default layout<span class="label label-success span-sidebar">CURRENT</span></a></li>
+                        <li><a href="layout-no-sidebar-right.html">No sidebar right</a></li>
+                        <li><a href="layout-profile-left.html">Profile summary left</a></li>
+                    </ul>
+                </li>
+                <li><a href="#fakelink"><i class="fa fa-flask icon-sidebar"></i><i class="fa fa-angle-right chevron-icon-sidebar">
+                </i>Widget UI kits </a>
+                    <ul class="submenu">
+                        <li><a href="widget-default.html">Default</a></li>
+                        <li><a href="widget-store.html">Store</a></li>
+                        <li><a href="widget-real-estate.html">Real estate <span class="label label-danger span-sidebar">
+                            HOT</span></a></li>
+                        <li><a href="widget-blog.html">Blog</a></li>
+                        <li><a href="widget-social.html">Social <span class="label label-danger span-sidebar">
+                            HOT</span></a></li>
+                    </ul>
+                </li>
+                <li><a href="#fakelink"><i class="fa fa-folder icon-sidebar"></i><i class="fa fa-angle-right chevron-icon-sidebar">
+                </i>Basic elements <span class="label label-info span-sidebar">BS3</span> </a>
+                    <ul class="submenu">
+                        <li><a href="element-typography.html">Typography</a></li>
+                        <li><a href="element-form.html">Form element</a></li>
+                        <li><a href="element-form-example.html">Form example</a></li>
+                        <li><a href="element-wyswyg.html">Form WYSWYG</a></li>
+                        <li><a href="element-validation.html">Form validation</a></li>
+                        <li><a href="element-button.html">Button</a></li>
+                    </ul>
+                </li>
+                <li><a href="#fakelink"><i class="fa fa-folder-open icon-sidebar"></i><i class="fa fa-angle-right chevron-icon-sidebar">
+                </i>More elements </a>
+                    <ul class="submenu">
+                        <li><a href="element-icon.html">Icons <span class="badge badge-warning span-sidebar">
+                            3</span></a></li>
+                        <li><a href="element-box-panel.html">Box &amp; panel</a></li>
+                        <li><a href="element-nav-dropdown.html">Nav &amp; dropdown</a></li>
+                        <li><a href="element-breadcrumb-pagination.html">Breadcrumb &amp; pagination</a></li>
+                        <li><a href="element-thumbnail-jumbotron.html">Jumbotron &amp; thumbnail</a></li>
+                        <li><a href="element-alert-progress-bar.html">Alert &amp; progress bar</a></li>
+                        <li><a href="element-list-media.html">List group &amp; media object</a></li>
+                        <li><a href="element-collapse.html">Collapse</a></li>
+                        <li><a href="element-grid-masonry.html">Grid &amp; masonry</a></li>
+                        <li><a href="element-extra.html">Extra custom elements</a></li>
+                    </ul>
+                </li>
+                <li><a href="#fakelink"><i class="fa fa-table icon-sidebar"></i><i class="fa fa-angle-right chevron-icon-sidebar">
+                </i>Tables </a>
+                    <ul class="submenu">
+                        <li><a href="table-static.html">Static table</a></li>
+                        <li><a href="table-color.html">Table color</a></li>
+                        <li><a href="table-datatable.html">Jquery datatable</a></li>
+                    </ul>
+                </li>
+                <li><a href="#fakelink"><i class="fa fa-bar-chart-o icon-sidebar"></i><i class="fa fa-angle-right chevron-icon-sidebar">
+                </i>Chart or Graph </a>
+                    <ul class="submenu">
+                        <li><a href="chart-morris.html">Morris chart</a></li>
+                        <li><a href="chart-c3.html">C3 chart</a></li>
+                        <li><a href="chart-flot.html">Flot chart</a></li>
+                        <li><a href="chart-easy-knob.html">Easy pie chart &amp; knob</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
     @RenderBody()
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/app.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
