--- a/Src/Zing.Web/Views/Home/Edit.cshtml
+++ b/Src/Zing.Web/Views/Home/Edit.cshtml
@@ -3,8 +3,7 @@
 @{
     ViewBag.Title = "Edit";
 }
-
-<h2>Edit</h2>
+<h1 class="page-heading">DASHBOARD <small>Sub heading here</small></h1>
 @using (Html.BeginForm("Edit", "Home", FormMethod.Post, new { role = "form", @class = "form-horizontal" }))
 {
     <div class="form-group">
