update temp commit

--- a/Src/Zing.Web/Views/Home/Grid.cshtml
+++ b/Src/Zing.Web/Views/Home/Grid.cshtml
@@ -22,6 +22,6 @@
             .ButtonCount(5))
         .DataSource(dataSource => dataSource
             .Ajax()
-            .Read(read => read.Action("Customers_Read", "Grid"))
+            .Read(read => read.Action("Customers_Read", "Home"))
         )
 )
