--- a/Src/Zing.Web/Views/Home/Index.cshtml
+++ b/Src/Zing.Web/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@model Zing.Modules.Users.ViewModels.UserViewModel
 @{
     ViewBag.Title = "Index";
-  
+
     var workContext = WorkContext;
+
+    var httpContext = workContext.HttpContext;
 
 }
 <h2>Index</h2>
