--- a/Src/Zing.Web/Content/Logon.css
+++ b/Src/Zing.Web/Content/Logon.css
@@ -482,3 +482,16 @@ i {
     .input-group .input-group-addon {
         padding: 3px 5px;
     }
+
+.qtip-default {
+    background-color: #ee0101;
+    border: 2px solid #ddd;
+}
+
+.ui-tooltip-red {
+    color: white;
+}
+
+.qtip-content {
+    padding: 7px 11px;
+}
