--- a/Src/Zing.Web/Views/Account/Logon.cshtml
+++ b/Src/Zing.Web/Views/Account/Logon.cshtml
@@ -17,38 +17,40 @@
     <div class="buc-login-box">
         <div class="login-container">
             <div class="header">
-
             </div>
             <form name="loginForm" id="loginForm" action="" method="post">
-                <input type="hidden" name="return" value="" />
-                <div class="legend">
-                    登录中心
-                </div>
-                <hr>
-                <hr class="decoration">
-                <div class="hint">
-                </div>
-                <fieldset>
-                    <div id="container">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="icon-user"></i></span>
-                            <input type="text" class="form-control" name="userName" id="userName" placeholder="Username" data-val="true" data-val-required="用户名不能为空"><span data-valmsg-for="userName" data-valmsg-replace="true"></span>
-                        </div>
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="icon-key"></i></span>
-                            <input type="password" id="userPwd" name="userPwd" class="form-control" placeholder="Password" data-val="true" data-val-required="密码不能为空"><span data-valmsg-for="userPwd" data-valmsg-replace="true"></span>
-                        </div>
+            <input type="hidden" name="return" value="" />
+            <div class="legend">
+                登录中心
+            </div>
+            <hr>
+            <hr class="decoration">
+            <div class="hint">
+            </div>
+            <fieldset>
+                <div id="container">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="icon-user"></i></span>
+                        <input type="text" class="form-control" name="userName" id="userName" placeholder="Username"
+                            data-val="true" data-val-required="用户名不能为空">
                     </div>
-                    <label class="checkbox" id="keepLogin">
-                        <input type="checkbox" id="loginMaintain" name="login_maintain" style="margin:0;position:static;">
-                        &nbsp;保持登录
-                    </label>
-                    <button type="submit" class="btn-login">
-                        登录
-                    </button>
-                    <input type="hidden" name="event_submit_do_sso_login" value="true">
-                    <input type="hidden" name="umidTokenId" value="Tc56b4df09651159d9021b03330297db7">
-                </fieldset>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="icon-key"></i></span>
+                        <input type="password" id="userPwd" name="userPwd" class="form-control" placeholder="Password"
+                            data-val="true" data-val-required="密码不能为空">
+                    </div>
+                </div>
+                <label class="checkbox" id="keepLogin">
+                    <input type="checkbox" id="loginMaintain" name="login_maintain" style="margin: 0;
+                        position: static;">
+                    &nbsp;保持登录
+                </label>
+                <button type="submit" class="btn-login">
+                    登录
+                </button>
+                <input type="hidden" name="event_submit_do_sso_login" value="true">
+                <input type="hidden" name="umidTokenId" value="Tc56b4df09651159d9021b03330297db7">
+            </fieldset>
             </form>
         </div>
     </div>
@@ -56,6 +58,5 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/Scripts/qTip/jquery.qtip.js")
-
 </body>
 </html>
