--- a/Src/Zing.Web/Views/Account/Logon.cshtml
+++ b/Src/Zing.Web/Views/Account/Logon.cshtml
@@ -41,10 +41,10 @@
                     </div>
                 </div>
                 <label class="checkbox" id="keepLogin">
-                    @* @Html.CheckBox("rememberMe", false, new { style = "margin: 0; position: static;" })*@
-                    <input type="checkbox" id="rememberMe" name="rememberMe" style="margin: 0; position: static;"
-                        value="false" />
-                    &nbsp;保持登录
+                    @Html.CheckBox("rememberMe", false, new { style = "margin: 0; position: static;" })
+                    <!--   <input type="checkbox" id="rememberMe" name="rememberMe" style="margin: 0; position: static;"
+                        value="false" />-->
+                        &nbsp;保持登录
                 </label>
                 <button type="submit" class="btn-login">
                     登录
