--- a/Src/Zing.Web/Views/Shared/_Layout.cshtml
+++ b/Src/Zing.Web/Views/Shared/_Layout.cshtml
@@ -346,7 +346,20 @@
             </ul>
         </div>
         <div class="page-content">
-            <div class="container-fluid">
+            <div class="page-subheading page-subheading-md">
+                <ol class="breadcrumb">
+                    <li><a href="javascript:;">Dashboard</a></li>
+                    <li><a href="javascript:;">Forms</a></li>
+                    <li class="active"><a href="javascript:;">Form Layouts</a></li>
+                </ol>
+            </div>
+            <div class="page-heading page-heading-md ">
+                <h2>
+                    @ViewBag.Title</h2>
+            </div>
+            <div class="clear">
+            </div>
+            <div class="container-fluid-md">
                 @RenderBody()
             </div>
         </div>
