--- a/Src/Zing.Web/Views/Shared/_Layout.cshtml
+++ b/Src/Zing.Web/Views/Shared/_Layout.cshtml
@@ -448,6 +448,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/Scripts/app.js")
-    @RenderSection("scripts", required: false)
+    @RenderSection("ScriptAssets", required: false)
+    @RenderSection("ScriptBlock", required: false)
 </body>
 </html>
