--- a/Src/Zing.Web/Views/User/Index.cshtml
+++ b/Src/Zing.Web/Views/User/Index.cshtml
@@ -9,24 +9,39 @@
         {
             toolbar.Template(@<text>
                 <div class="toolbar">
-                    @(Html.Kendo().Button().Name("btnAdd").HtmlAttributes(new { type = "button" }).Content("add user"))
+                    @(Html.Kendo().Button().Name("btnAdd").HtmlAttributes(new { type = "button" }).Content("add user").Events(x => x.Click("AddUser")))
                 </div>
             </text>);
         })
-                                                                            .Columns(columns =>
-                                                                            {
-                                                                                columns.Bound(c => c.UserName).Width(140);
-                                                                                columns.Bound(c => c.NormalizedUserName).Width(190);
-                                                                                columns.Bound(c => c.Email);
-                                                                            })
+                                                                                                                                            .Columns(columns =>
+                                                                                                                                            {
+                                                                                                                                                columns.Bound(c => c.UserName).Width(140);
+                                                                                                                                                columns.Bound(c => c.NormalizedUserName).Width(190);
+                                                                                                                                                columns.Bound(c => c.Email);
+                                                                                                                                            })
 
-                                                                                                        .HtmlAttributes(new { style = "height: 100%;" })
-                                                                                                        .Scrollable()
-                                                                                                        .Sortable()
-                                                                                                        .Pageable(pageable => pageable
-                                                                                                            .Refresh(true)
-                                                                                                            .PageSizes(true).ButtonCount(5))
-                                                                                                            .DataSource(dataSource => dataSource.Ajax().Read(read => read.Action("Customers_Read", "User")))
+                                                                                                                                            .HtmlAttributes(new { style = "height: 100%;" })
+                                                                                                                                            .Scrollable()
+                                                                                                                                            .Sortable()
+                                                                                                                                            .Pageable(pageable => pageable
+                                                                                                                                            .Refresh(true)
+                                                                                                                                            .PageSizes(true).ButtonCount(5))
+                                                                                                                                            .DataSource(dataSource => dataSource.Ajax().Read(read => read.Action("Customers_Read", "User")))
 
     )
 </div>
+@section ScriptAssets
+{
+
+}
+@section ScriptBlock
+{
+    <script>
+        $(function () {
+
+        });
+        function AddUser() {
+            window.location.href = "";
+        }
+    </script>
+}
