--- a/Src/Zing.Web/Views/Shared/_Layout.cshtml
+++ b/Src/Zing.Web/Views/Shared/_Layout.cshtml
@@ -420,7 +420,7 @@
                     <ul class="submenu">
                         <li><a href="@Url.Content("~/User/Index")">用户管理</a></li>
                         <li><a href="@Url.Content("~/Role/Index")">角色管理</a></li>
-                        <li><a href="@Url.Content("~/User/Index")">用户管理</a></li>
+                        <li><a href="@Url.Content("~/User/Query")">Query</a></li>
                     </ul>
                 </li>
             </ul>
