--- a/Src/Zing.Web/Views/User/Index.cshtml
+++ b/Src/Zing.Web/Views/User/Index.cshtml
@@ -13,20 +13,14 @@
                 </div>
             </text>);
         })
-                                                                                                                                            .Columns(columns =>
-                                                                                                                                            {
-                                                                                                                                                columns.Bound(c => c.UserName).Width(140);
-                                                                                                                                                columns.Bound(c => c.NormalizedUserName).Width(190);
-                                                                                                                                                columns.Bound(c => c.Email);
-                                                                                                                                            })
-
-                                                                                                                                            .HtmlAttributes(new { style = "height: 100%;" })
-                                                                                                                                            .Scrollable()
-                                                                                                                                            .Sortable()
-                                                                                                                                            .Pageable(pageable => pageable
-                                                                                                                                            .Refresh(true)
-                                                                                                                                            .PageSizes(true).ButtonCount(5))
-                                                                                                                                            .DataSource(dataSource => dataSource.Ajax().Read(read => read.Action("Customers_Read", "User")))
+       .Columns(columns => {                                                                                                                                        columns.Bound(c => c.UserName).Width(140); 
+            columns.Bound(c => c.NormalizedUserName).Width(190);
+            columns.Bound(c => c.Email);
+         })
+       .HtmlAttributes(new { style = "height: 100%;" }) 
+       .Scrollable()
+       .Sortable() 
+       .Pageable(pageable => pageable.Refresh(true).PageSizes(true).ButtonCount(5)).DataSource(dataSource => dataSource.Ajax().Read(read => read.Action("Customers_Read", "User")))
 
     )
 </div>
