--- a/Src/Zing.Web/Views/User/Query.cshtml
+++ b/Src/Zing.Web/Views/User/Query.cshtml
@@ -14,7 +14,7 @@
      };
 }
 
-@using (Html.BeginForm("", "", FormMethod.Post))
+@using (Html.BeginForm("Query", "User", FormMethod.Post))
 {
     @Html.DropDownList("RecordField", fieldList)
 
